@@ -10,7 +10,7 @@ package = com.infinityraider.infinitylib
 
 # Version
 version_major = 0
-version_minor = 9
+version_minor = 10
 version_patch = 0
 
 # Core
